# IgnisOS

./: .gitignore  .gitlab-ci.yml  ;  CMakeLists.txt  CONTRIBUTING.md  Ignis.iso  LICENSE  README.md  armrun.sh  build.sh  limine.cfg  run.sh
.github/workflows/: mkimg.yml
etc/headerconf/: kesswm.cfg.h  services.cfg.h
iso_root/: limine.cfg
iso_root/Ignis/: kernel.sys
kernel/: linker-arm.ld
kernel/include/arch/x64/: idt.h
kernel/include/lib/: asm.h
kernel/src/: kmain.c
kernel/src/arch/x64/: idt.c
meta/: limine.cfg
meta/firmware/: readme.txt
meta/initrd/: services.cfg
meta/internals/: initrd.sys
scripts/: mkiso.sh
share/docs/: building.md  log.md
sys/include/arch/bus/pci/: pci.h
sys/include/arch/cpu/: smp.h
sys/include/arch/x64/: idt.h  interrupts.h
sys/include/arch/x86/: gdt.h  io.h
sys/include/arch/x86/apic/: ioapic.h  lapic.h
sys/include/drivers/: pit.h  serial.h
sys/include/drivers/ps2/: keyboard.h  mouse.h
sys/include/drivers/video/: framebuffer.h
sys/include/firmware/acpi/: acpi.h
sys/include/fs/: initrd.h  tmpfs.h  vfs.h
sys/include/intr/: exceptions.h  init.h  irq.h  syscall.h
sys/include/ipc/: shmem.h
sys/include/lib/: asm.h  assert.h  elf.h  errno.h  font.h  log.h  module.h  panic.h  rand.h  release.h  string.h  types.h
sys/include/mm/: heap.h  mmap.h  pmm.h  vmm.h
sys/include/proc/: perm.h  proc.h  tss.h
sys/include/tty/: console.h
sys/include/uapi/: uapi.h
sys/src/: kmain.c
sys/src/arch/aarch64/: intr.aarch.s
sys/src/arch/bus/pci/: pci.c
sys/src/arch/cpu/: smp.c
sys/src/arch/x64/: idt.c  interrupts.c
sys/src/arch/x86/: gdt.c  io.c
sys/src/arch/x86/apic/: ioapic.c  lapic.c
sys/src/drivers/: pit.c  serial.c
sys/src/drivers/hdd/: ata.c
sys/src/drivers/ps2/: keyboard.c  mouse.c
sys/src/drivers/video/: framebuffer.c
sys/src/firmware/acpi/: acpi.c
sys/src/fs/: initrd.c  tmpfs.c  vfs.c
sys/src/intr/: exceptions.c  init.c  intr.asm  irq.asm  syscall.asm  syscall.c  syscall_dispatcher.asm  trap.asm  trap.c
sys/src/ipc/: shmem.c
sys/src/lib/: elf.c  font.c  log.c  module.c  panic.c  rand.c  string.c
sys/src/mm/: heap.c  mmap.c  pmm.c  vmm.c
sys/src/proc/: asmhelpers.c  proc.asm  proc.c  ring3.asm  sched.asm  tss.asm  tss.c
sys/src/tty/: console.c
sys/src/uapi/: uapi.c
tools/: build.sh  mkinitrd.sh  mkiso.sh  mklib.sh  run-installer.sh  run.sh  todo.sh
usr/: link.ld
usr/lib/libc/include/: stddef.h  stdlib.h  string.h
usr/lib/libc/include/sys/: fb.h  ioctl.h  syscall.h
usr/lib/libc/platform/ignis/: crt0.s  syscall.s
usr/lib/libc/src/: stdlib.c
usr/lib/libgfx/: Makefile
usr/lib/libgfx/include/: draw.h  window.h
usr/lib/libgfx/include/libgfx/: draw.h  window.h
usr/lib/libgfx/src/: draw.c  window.c
usr/libc/: Makefile
usr/libc/include/: stdint.h  stdio.h
usr/libc/include/sys/: fb.h  ioctl.h  syscall.h
usr/libc/platform/ignis/: syscall.s
usr/libc/platform/ignis/wrapper/: stdio.c
usr/libc/src/: string.c
usr/services/: CMakeLists.txt
usr/services/init/: CMakeLists.txt
usr/services/init/src/: main.c
usr/services/kesswm/: CMakeLists.txt  link.ld
usr/services/kesswm/include/: desktop.h  draw.h  win.h
usr/services/kesswm/src/: desktop.c  draw.c  main.c  win.c
